# api/controllers/login.controller.js
@@ -20,32 +20,36 @@ var nameController = '[Login controller]';
 
 // Login con usuario y pwd
 function login(req, res) {
-  
-  var username = req.body.username;
-  var password = req.body.password;
-  var role     = req.body.role;
+  try {
+    var username = req.body.username;
+    var password = req.body.password;
+    var role = req.body.role;
 
-  log.debug(`-----> ${nameController} ${login.name} (IN) --> username: ${username}, password: <<OFUSCATED>>, role ${role}`);
+    log.debug(`-----> ${nameController} ${login.name} (IN) --> username: ${username}, password: <<OFUSCATED>>, role ${role}`);
 
-  authenticationService.authenticateUser(username, password, role)
-  .then(result => { 
-    log.info(`-----> ${nameController} ${login.name} OUT --> result: ${result}`);  
-    log.info(`User ${username} authenticated!`);
-    var userInfo = {
-      username: username,
-      role: role
-    }
-    log.info(`User Info ${JSON.stringify(userInfo)}`);
-    var generatedToken = authenticationService.generateToken(userInfo);
-    log.info(`Token generated: ${generatedToken}`);
-    var jsonToken = { "authorization": generatedToken };
-    res.json(jsonToken);
-  })
-  .catch(err => {
+    authenticationService.authenticateUser(username, password, role)
+      .then(result => {
+        log.info(`-----> ${nameController} ${login.name} OUT --> result: ${result}`);
+        log.info(`User ${username} authenticated!`);
+        var userInfo = {
+          username: result,
+          role: role
+        }
+        log.info(`User Info ${JSON.stringify(userInfo)}`);
+        var generatedToken = authenticationService.generateToken(userInfo);
+        log.info(`Token generated: ${generatedToken}`);
+        var jsonToken = { "authorization": generatedToken };
+        res.json(jsonToken);
+      })
+      .catch(err => {
+        log.error(err)
+        log.info(`User ${username} fails authentication!`);
+        res.status(401).send({ "message": "Fail authentication" }); //UNAUTHORIZED
+      })
+  } catch (err) {
     log.error(err)
-    log.info(`User ${username} fails authentication!`);
-    res.status(401).send({"message": "Fail authentication"}); //UNAUTHORIZED
-  })
+    res.status(500).send({ "message": "Login failed" });
+  }
 }
 
 module.exports = {
